Verif/Test/Invalide/test_erreur_3.59-12.deca
// Description:
//    Programme soulevant l'erreur (3.59)
// Resultats:
//    Erreur contextuelle
//    Ligne 20 : Conversion de 'type_classe(A)' en 'int' impossible (règle 3.59)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 20/01/2012

class A {
   void x(){
   }
}

A a;
int i;
{
   i = cast<int> (a);
}